@@ -64,9 +64,9 @@ import java.io.File;
 import java.io.IOException;
 import java.io.UncheckedIOException;
 import java.nio.file.Files;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.function.BiConsumer;
-import java.util.List;
 import java.util.Optional;
 
 public class TestFixturesPlugin implements Plugin<Project> {
@@ -162,7 +162,7 @@ public class TestFixturesPlugin implements Plugin<Project> {
             final Integer timeout = ext.has("dockerComposeHttpTimeout") ? (Integer) ext.get("dockerComposeHttpTimeout") : 120;
             composeExtension.getEnvironment().put("COMPOSE_HTTP_TIMEOUT", timeout);
 
-            Optional<String> dockerCompose = List.of(DOCKER_COMPOSE_BINARIES)
+            Optional<String> dockerCompose = Arrays.asList(DOCKER_COMPOSE_BINARIES)
                 .stream()
                 .filter(path -> project.file(path).exists())
                 .findFirst();
